Fix homepage horizontal scrollbar in promo section
Refs #624

--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -1477,6 +1477,7 @@ input[type='radio'] {
   .homepage .promo-row {
     padding-top: 80px;
     margin-right: -45px;
+    overflow-x: hidden;
   }
 }
 
